[gd_scene load_steps=9 format=3 uid="uid://bhj8wegucpjjr"]

[ext_resource type="Script" path="res://Assets/Port v2/GB_port_4.gd" id="1_l8suc"]
[ext_resource type="Texture2D" uid="uid://dr8kif3xk2ef" path="res://Assets/Opdelt porte/greenapple_port_h.png" id="2_o6fdq"]
[ext_resource type="Texture2D" uid="uid://fob3ttumi237" path="res://Assets/Opdelt porte/greenapple_port_v.png" id="3_t34fa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x407l"]
size = Vector2(67, 20)

[sub_resource type="Animation" id="Animation_85isk"]
resource_name = "GB_port_open_4"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GB_h_4:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(17, 0), Vector2(33, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GB_v_4:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-13, 0), Vector2(-33, 0)]
}

[sub_resource type="Animation" id="Animation_4mjwx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GB_h_4:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GB_v_4:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-13, 0)]
}

[sub_resource type="Animation" id="Animation_dhqih"]
resource_name = "GB_port_close_4"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GB_h_4:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(33, 0), Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GB_v_4:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-33, 0), Vector2(-13, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vrsf8"]
_data = {
"GB_port_close_4": SubResource("Animation_dhqih"),
"GB_port_open_4": SubResource("Animation_85isk"),
"RESET": SubResource("Animation_4mjwx")
}

[node name="GB_port_4" type="StaticBody2D"]
script = ExtResource("1_l8suc")

[node name="GB_h_4" type="Sprite2D" parent="."]
position = Vector2(17, 0)
texture = ExtResource("2_o6fdq")

[node name="GB_v_4" type="Sprite2D" parent="."]
position = Vector2(-13, 0)
texture = ExtResource("3_t34fa")

[node name="GB_port_collision_4" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_x407l")

[node name="ap_GB_4" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vrsf8")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="close_port"]
